--- a/notebooks/initial-exploration.ipynb
+++ b/notebooks/initial-exploration.ipynb
@@ -1624,7 +1624,7 @@
     "sns.countplot(y=clas)\n",
     "ax.set_ylabel(\"quality\")\n",
     "sns.despine(offset=10, trim=True)\n",
-    "plt.savefig('../images/class_counts.png')"
+    "# plt.savefig('../images/class_counts.png')"
    ]
   },
   {
